Edited wiki page through web user interface.

--- a/wiki/IRedisClient.wiki
+++ b/wiki/IRedisClient.wiki
@@ -30,6 +30,7 @@ public interface IRedisClient
 	void Save();
 	void SaveAsync();
 	void Shutdown();
+	void RewriteAppendOnlyFileAsync();
 	void FlushDb();
 
 	//Basic Redis Connection Info
@@ -68,7 +69,7 @@ public interface IRedisClient
 	IDisposable AcquireLock(string key);
 	IDisposable AcquireLock(string key, TimeSpan timeOut);
 
-	#region List operations
+	#region Set operations
 
 	List<string> GetKeys(string pattern);
 	List<string> GetKeyValues(List<string> keys);
@@ -92,7 +93,7 @@ public interface IRedisClient
 	#endregion
 
 
-	#region Set operations
+	#region List operations
 
 	List<string> GetAllFromList(string listId);
 	List<string> GetRangeFromList(string listId, int startingFrom, int endingAt);
@@ -100,14 +101,25 @@ public interface IRedisClient
 	void AddToList(string listId, string value);
 	void PrependToList(string listId, string value);
 	void RemoveAllFromList(string listId);
+	string RemoveStartFromList(string listId);
+	string BlockingRemoveStartFromList(string listId, TimeSpan? timeOut);
+	string RemoveEndFromList(string listId);
 	void TrimList(string listId, int keepStartingFrom, int keepEndingAt);
 	int RemoveValueFromList(string listId, string value);
 	int RemoveValueFromList(string listId, string value, int noOfMatches);
-	int GetListCount(string setId);
+	int GetListCount(string listId);
 	string GetItemFromList(string listId, int listIndex);
 	void SetItemInList(string listId, int listIndex, string value);
+
+	//Queue operations
+	void EnqueueOnList(string listId, string value);
 	string DequeueFromList(string listId);
+	string BlockingDequeueFromList(string listId, TimeSpan? timeOut);
+
+	//Stack operations
+	void PushToList(string listId, string value);
 	string PopFromList(string listId);
+	string BlockingPopFromList(string listId, TimeSpan? timeOut);
 	string PopAndPushBetweenLists(string fromListId, string toListId);
 
 	#endregion
@@ -165,6 +177,7 @@ public interface IRedisClient
 	void SetRangeInHash(string hashId, IEnumerable<KeyValuePair<string, string>> keyValuePairs);
 	int IncrementItemInHash(string hashId, string key, int incrementBy);
 	string GetItemFromHash(string hashId, string key);
+	List<string> GetItemsFromHash(string hashId, params string[] keys);
 	bool RemoveFromHash(string hashId, string key);
 	int GetHashCount(string hashId);
 	List<string> GetHashKeys(string hashId);
@@ -180,7 +193,6 @@ public interface IRedisClient
 	void PublishMessage(string toChannel, string message);
 
 	#endregion
-
 }
 
 }}}
