--- a/wiki/RedisLocks.wiki
+++ b/wiki/RedisLocks.wiki
@@ -1,5 +1,5 @@
 #labels Redis,Distributed,Concurrent,HighPerformance,Lock
-This page shows how to use the [C# Redis Client] to take advantage of Redis's fast atomic server operations to enable high-performance *distributed locks* that can span across multiple app servers.
+This page shows how to use the [ServiceStackRedis C# Redis Client] to take advantage of Redis's fast atomic server operations to enable high-performance *distributed locks* that can span across multiple app servers.
 
 = Achieving High Performance, Distributed Locking with Redis =
 
