--- a/wiki/RedisLocks.wiki
+++ b/wiki/RedisLocks.wiki
@@ -50,7 +50,7 @@ for (var i = 1; i <= noOfClients; i++)
 		}
 	};
 
-	//Asynchronously invoke the above delegate
+	//Asynchronously invoke the above delegate in a background thread
 	asyncResults.Add(actionFn.BeginInvoke(null, null));
 }
 
