--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -1,16 +1,42 @@
 #labels Phase-QA,Redis,ReleaseNotes
 Latest release notes for the latest version of the c# [ServiceStackRedis ServiceStack.Redis client].
 
-= Redis Client v1.20 Release Notes =
-This version adds support for *all operations* available in Redis v1.3.11 (and the upcoming v2.0 RC) apart from the special debug commands: MONITOR / CONFIG / DEBUG which are commonly accessed via redis-cli/telnet for diagnosing a live-running Redis instance.
+= Redis Client v1.30 Release Notes =
+This version adds support for the recently released [http://code.google.com/p/redis/wiki/Redis_2_0_0_Changelog Redis v2.0]. 
+This release also fixes a major performance issue with the older clients so it is now a recommended upgrade for all older clients which ideally should coincide with an upgrade to  redis-server v2.0.
+
+===Breaking API Changes===
+Unfortunately while starting to develop [http://www.servicestack.net/RedisWebServices.Host/Public/Metadata RedisWebServices] I noticed that the nomenclature of the descriptive API found in the [IRedisClient] and [IRedisTypedClient] were sometimes in-consistent. 
+
+Normally when making changes to published API's I would continue to deprecate and support the older API's unfortunately since there was _so many_ changes supporting both API's would've made it more confusing so I've taken the opportunity with the release of redis-server v2.0 to start with a clean slate, though I will continue to make available the older version (v1.20) of the client below.
+
+The wording in the new [IRedisClient] and [http://www.servicestack.net/RedisWebServices.Host/Public/Metadata RedisWebService] API's:
+  * For write operations I specify to *what* I'm adding an as well as what I'm adding it to: 
+     * e.g. `AddItemToList` as opposed to `AddToList`.
+  * For read operations I specify *what* I'm getting and *where* I'm getting it from 
+    * e.g. `GetAllItemsFromList` as opposed to `GetAllFromList`.
+  * A normal Key/Value pair using Get/Set/SetEntryInHash is referred to as an `Entry` which contains both a 'Key' and a 'Value'. So the normal `Set` becomes `SetEntry`
+  * A Value in a List, Set, or SortedSet is referred as an `Item`
+
+Please file any issues you find with the C# Client (or the rest of ServiceStack) on the [http://code.google.com/p/servicestack/issues/list issues pages].
 
 = Download =
 The latest version of the open source c# redis client is available:
-  * As a stand-alone dll - http://servicestack.googlecode.com/files/ServiceStack.Redis.dll
+  * As a stand-alone dll - http://servicestack.googlecode.com/files/ServiceStack.Redis.zip
   * Or bundled inside the core Service Stack binaries - http://servicestack.googlecode.com/files/ServiceStack.zip
 
 Download the stable and development release of the Redis Server Windows builds here:
-http://code.google.com/p/servicestack/wiki/RedisWindowsDownload (currently v1.3.10)
+http://code.google.com/p/servicestack/wiki/RedisWindowsDownload (currently v2.0RC)
+
+== Older Releases ==
+For those that can't move to the new redis-server and new C# client, I will maintain the downloads of the older v2.0 libraries:
+  * [http://servicestack.googlecode.com/files/ServiceStack.Redis-1.20.zip ServiceStack.Redis-1.20.zip]
+  * [http://servicestack.googlecode.com/files/ServiceStack-1.20.zip ServiceStack-1.20.zip]
+
+
+
+= Redis Client v1.20 Release Notes =
+This version adds support for *all operations* available in Redis v1.3.11 (and the upcoming v2.0 RC) apart from the special debug commands: MONITOR / CONFIG / DEBUG which are commonly accessed via redis-cli/telnet for diagnosing a live-running Redis instance.
 
 = Redis Client v1.19 Release Notes =
 The biggest feature of this release is support for Redis Publish/Subscribe operations.
