--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -14,15 +14,16 @@ Having the latest version of Redis running on windows is important for the devel
 
 = Download for Windows =
 
-Download latest development release of Redis 1.3.10 (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-1.3.10-windows.zip redis-1.3.10-windows.zip]
+Download latest development release of Redis 2.0.0-rc1 (includes Cygwin):
+  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc1.zip redis-2.0.0-rc1.zip]
 
-Download latest stable release of Redis 1.2.6 (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-1.2.6-windows.zip redis-1.2.6-windows.zip]
+Download latest stable release of Redis 2.0.0-rc1 (includes Cygwin):
+  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc1.zip redis-2.0.0-rc1.zip]
 
 === Older Releases ===
   * [http://servicestack.googlecode.com/files/redis-1.3.9-windows.zip redis-1.3.9-windows.zip]
   * [http://servicestack.googlecode.com/files/redis-1.3.7-windows.zip redis-1.3.7-windows.zip]
+  * [http://servicestack.googlecode.com/files/redis-1.2.6-windows.zip redis-1.2.6-windows.zip] (older stable release)
   * [http://servicestack.googlecode.com/files/redis-1.2.5-windows.zip redis-1.2.5-windows.zip]
 
 = Getting Started =
