--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -116,4 +116,6 @@ A value with a double-quote is escaped with another double quote e.g:
 }}}
 
 == Rich support for resilience and schema versioning ==
-To better illustrate the resilience of `TypeSerializer` and the JSV Format check out a real world example of it when it's used to [MigrationsUsingSchemalessNoSql Painlessly migrate between old and new types in Redis].
+To better illustrate the resilience of `TypeSerializer` and the JSV Format check out a real world example of it when it's used to [MigrationsUsingSchemalessNoSql Painlessly migrate between old and new types in Redis]. 
+
+Support for dynamic payloads and late-bound objects is explained in the post [http://www.servicestack.net/mythz_blog/?p=314 Versatility of JSV – Late-bound objects].
