--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -15,12 +15,13 @@ Having the latest version of Redis running on windows is important for the devel
 = Download for Windows =
 
 Download latest development release of Redis 2.0.0-rc4 (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc4.zip redis-2.0.0-rc4.zip]
+  * [http://servicestack.googlecode.com/files/redis-2.0.0.zip redis-2.0.0.zip (32 bit)]
 
 Download latest stable release of Redis 2.0.0-rc4 (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc4.zip redis-2.0.0-rc4.zip]
+  * [http://servicestack.googlecode.com/files/redis-2.0.0.zip redis-2.0.0.zip (32 bit)]
 
 === Older Releases ===
+  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc4.zip redis-2.0.0-rc4.zip]
   * [http://servicestack.googlecode.com/files/redis-2.0.0-rc2.zip redis-2.0.0-rc2.zip]
   * [http://servicestack.googlecode.com/files/redis-2.0.0-rc1.zip redis-2.0.0-rc1.zip]
   * [http://servicestack.googlecode.com/files/redis-1.3.9-windows.zip redis-1.3.9-windows.zip]
