--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -3,7 +3,7 @@ ServiceStack.OrmLite is a convention-based, configuration-free lightweight ORM t
 
 = Introduction =
 
-OrmLite is a set of light-weight extension methods around System.Data.`*` interfaces which is designed to persist POCO classes with a minimal amount of intrusion and configuration.
+OrmLite is a set of light-weight C# extension methods around System.Data.`*` interfaces which is designed to persist POCO classes with a minimal amount of intrusion and configuration.
 Another Orm with similar goals is [http://code.google.com/p/sqlite-net/ sqlite-net].
 
 OrmLite was designed with a focus on these core objectives:
