--- a/wiki/IRedisClient.wiki
+++ b/wiki/IRedisClient.wiki
@@ -1,5 +1,5 @@
 #labels CSharp,Redis,API
-This page has now moved to [https://github.com/mythz/ServiceStack/wiki/IRedisClient IRedisClient on GitHub]. Please update your links.
+*This page has now moved to [https://github.com/mythz/ServiceStack/wiki/IRedisClient IRedisClient on GitHub]. Please update your links.*
 
 
 Details of the IRedisClient API implemented by the [ServiceStackRedis ServiceStack.Redis client]
