--- a/wiki/IRedisTypedClient.wiki
+++ b/wiki/IRedisTypedClient.wiki
@@ -1,4 +1,12 @@
 #labels CSharp,Redis,TypeSerializer,POCO
+==NOTE: This page has now moved to [IRedisTypedClient on GitHub](https://github.com/mythz/ServiceStack/wiki/IRedisTypedClient). 
+Please update your links.==
+
+<hr/>
+<br/>
+<br/>
+
+
 A 'strongly-typed' API available on [ServiceStackRedis Service Stack's C# Redis Client] to make all Redis Value operations to apply against any c# type
 
 = Introduction =
