Edited wiki page IRedisTypedClient through web user interface.

--- a/wiki/IRedisTypedClient.wiki
+++ b/wiki/IRedisTypedClient.wiki
@@ -1,6 +1,5 @@
 #labels CSharp,Redis,TypeSerializer,POCO
-== NOTE: This page has now moved to [https://github.com/mythz/ServiceStack/wiki/IRedisTypedClient IRedisTypedClient on GitHub]. 
-Please update your links. ==
+== NOTE: This page has now moved to [https://github.com/mythz/ServiceStack/wiki/IRedisTypedClient IRedisTypedClient on GitHub]. Please update your links. ==
 
 <hr/>
 <br/>
