--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -1,4 +1,10 @@
 #labels Featured,Redis,OpenSource
+== NOTE: This project has not moved to [https://github.com/mythz/ServiceStack.Redis]. Please update your links. ==
+
+<hr/>
+<br/>
+
+
 = An Open Source C# Client for Redis =
 
 [http://code.google.com/p/redis/ Redis] is one of the fastest and feature-rich key-value stores to come from the [http://en.wikipedia.org/wiki/NoSQL NoSQL] movement. It is similar to memcached but the dataset is not volatile, and values can either be strings lists, sets, sorted sets or hashes.
