--- a/wiki/IRedisTypedTransaction.wiki
+++ b/wiki/IRedisTypedTransaction.wiki
@@ -1,3 +1,9 @@
+== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/IRedisTypedTransaction IRedisTypedTransaction on GitHub]. Please update your links. ==
+
+<hr/>
+<br/>
+
+
 The [RedisTransactions] interface implemented by [ServiceStackRedis ServiceStack's C# Redis Client].
 
 = Introduction =
