--- a/wiki/IRedisTransaction.wiki
+++ b/wiki/IRedisTransaction.wiki
@@ -1,3 +1,8 @@
+== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/IRedisTransaction IRedisTransaction on GitHub]. Please update your links. ==
+
+<hr/>
+<br/>
+
 The [RedisTransactions] interface implemented by [ServiceStackRedis ServiceStack's C# Redis Client].
 
 = Introduction =
