--- a/wiki/RedisLocks.wiki
+++ b/wiki/RedisLocks.wiki
@@ -1,4 +1,10 @@
 #labels Redis,Distributed,Concurrent,HighPerformance,Lock
+== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/RedisLocks RedisLocks on GitHub]. Please update your links. ==
+
+<hr/>
+<br/>
+
+
 This page shows how to use the [ServiceStackRedis C# Redis Client] to take advantage of Redis's fast atomic server operations to enable high-performance *distributed locks* that can span across multiple app servers.
 
 = Achieving High Performance, Distributed Locking with Redis =
