--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -1,4 +1,10 @@
 #labels Featured,OpenSource,Mono,Lightweight,Fast,ORM
+Note: This project has moved to [ServiceStack.OrmLite on GitHub](ServiceStack.OrmLite). Please update your links.
+
+<hr/>
+<br/>
+
+
 ServiceStack.OrmLite is a convention-based, configuration-free lightweight ORM that uses standard POCO classes and Data Annotation attributes to infer its table schema.
 
 = Introduction =
