--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -1,5 +1,5 @@
 #labels Redis,Windows,Server,Download
-== NOTE: This project has moved to [https://github.com/mythz/ServiceStack.Redis]. Please update your links. ==
+== NOTE: This project has moved to [https://github.com/ServiceStack/ServiceStack.Redis]. Please update your links. ==
 
 <hr/>
 <br/>
