--- a/wiki/RedisTransactions.wiki
+++ b/wiki/RedisTransactions.wiki
@@ -1,4 +1,4 @@
-== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/RedisTransactions RedisTransactions on GitHub]. Please update your links. ==
+== NOTE: This page has moved to [https://github.com/ServiceStack/ServiceStack.Redis/wiki/RedisTransactions RedisTransactions on GitHub]. Please update your links. ==
 
 <hr/>
 <br/>
