--- a/wiki/MigrationsUsingSchemalessNoSql.wiki
+++ b/wiki/MigrationsUsingSchemalessNoSql.wiki
@@ -1,5 +1,5 @@
 #labels Redis,Schemaless,NoSql,DataMigration
-== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/MigrationsUsingSchemalessNoSql MigrationsUsingSchemalessNoSql on GitHub]. Please update your links. ==
+== NOTE: This page has moved to [https://github.com/ServiceStack/ServiceStack.Redis/wiki/MigrationsUsingSchemalessNoSql MigrationsUsingSchemalessNoSql on GitHub]. Please update your links. ==
 
 <hr/>
 <br/>
