--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -1,5 +1,5 @@
 #labels Redis,NoSql
-== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/DesigningNoSqlDatabase DesigningNoSqlDatabase on GitHub]. Please update your links. ==
+== NOTE: This page has moved to [https://github.com/ServiceStack/ServiceStack.Redis/wiki/DesigningNoSqlDatabase DesigningNoSqlDatabase on GitHub]. Please update your links. ==
 
 <hr/>
 <br/>
