--- a/wiki/IRedisNativeClient.wiki
+++ b/wiki/IRedisNativeClient.wiki
@@ -1,5 +1,5 @@
 #labels Redis,API
-== NOTE: This page has moved to [https://github.com/mythz/ServiceStack.Redis/wiki/IRedisNativeClient IRedisNativeClient on GitHub]. Please update your links. ==
+== NOTE: This page has moved to [https://github.com/ServiceStack/ServiceStack.Redis/wiki/IRedisNativeClient IRedisNativeClient on GitHub]. Please update your links. ==
 
 <hr/>
 <br/>
