--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -4,45 +4,15 @@
 <hr/>
 <br/>
 
-Download the latest version of the Redis Server for Windows.
+Downloads and instructions for installing the latest version of the Redis Server on Windows is available at:
 
-= Introduction =
-
-Redis is one of the fastest and most feature-rich in-memory key value data stores to come from the NoSQL movement.
-
-From the description on the [http://code.google.com/p/redis/ Redis project's website]:
-  Redis is an advanced key-value store. It is similar to memcached but the dataset is not volatile, and values can be strings, exactly like in memcached, but also lists, sets, and ordered sets. All this data types can be manipulated with atomic operations to push/pop elements, add/remove elements, perform server side union, intersection, difference between sets, and so forth. Redis supports different kind of sorting abilities.
-
-Like most open-source technology Redis was born and is primarily developed on `*`NIX operating systems. If you're looking to install on a `*`NIX platform the best place to download Redis is still from the [http://code.google.com/p/redis/ redis project website].
-
-Having the latest version of Redis running on windows is important for the development of [ServiceStackRedis ServiceStack's open source C# Redis client] to keep up-to-date with the latest Redis features. As there has historically have been no reliable source for the latest builds for Windows, Service Stack will now be hosting current and future builds of the Redis server for Windows on this page.
-
-= Download 32bit Cygwin builds for Windows =
-
-Download latest development release of Redis 2.0.2 Stable (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-2.0.2.zip redis-2.0.2.zip (32 bit)]
-
-Download latest stable release of Redis 2.0.0 Stable (includes Cygwin):
-  * [http://servicestack.googlecode.com/files/redis-2.0.0.zip redis-2.0.0.zip (32 bit)]
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-x64.zip redis-2.0.0-x64.zip (32 bit)]
-
-= Alternate Redis Windows downloads and links =
-  * [http://github.com/dmajkic/redis/downloads Download 32bit and 64bit MinGw builds of redis-server for windows]
-  * [https://github.com/rgl/redis Project that lets you run Redis as a Windows Service]
-
-=== Older Releases ===
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc4.zip redis-2.0.0-rc4.zip]
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc2.zip redis-2.0.0-rc2.zip]
-  * [http://servicestack.googlecode.com/files/redis-2.0.0-rc1.zip redis-2.0.0-rc1.zip]
-  * [http://servicestack.googlecode.com/files/redis-1.3.9-windows.zip redis-1.3.9-windows.zip]
-  * [http://servicestack.googlecode.com/files/redis-1.3.7-windows.zip redis-1.3.7-windows.zip]
-  * [http://servicestack.googlecode.com/files/redis-1.2.6-windows.zip redis-1.2.6-windows.zip] (older stable release)
-  * [http://servicestack.googlecode.com/files/redis-1.2.5-windows.zip redis-1.2.5-windows.zip]
+= [https://github.com/mythz/redis-windows https://github.com/mythz/redis-windows]
 
 = Getting Started =
+
 Due to the popularity and simplicity of the Redis protocol there is a plethora of different Redis clients bindings for almost every popular language in use today. 
 
-For .NET applications you can download and get started with [ServiceStackRedis ServiceStack's open source c# Redis client library] - which can also be used on Linux platforms using [http://www.mono-project.com/Main_Page Mono].
+For .NET applications you can download and get started with [ServiceStack's open source c# Redis client library https://github.com/ServiceStack/ServiceStack.Redis] - which can also be used on Linux platforms using [http://www.mono-project.com/Main_Page Mono].
 
 For Java applications the most active library at the moment is [http://code.google.com/p/jredis/ JRedis]. For all other language bindings visit the [http://code.google.com/p/redis/wiki/SupportedLanguages redis supported languages page].
 
