--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -12,9 +12,9 @@ Downloads and instructions for installing the latest version of the Redis Server
 
 Due to the popularity and simplicity of the Redis protocol there is a plethora of different Redis clients bindings for almost every popular language in use today. 
 
-For .NET applications you can download and get started with ServiceStack's open source c# Redis client library https://github.com/ServiceStack/ServiceStack.Redis - which can also be used on Linux platforms using [http://www.mono-project.com/Main_Page Mono].
+For .NET applications you can download and get started with [https://github.com/ServiceStack/ServiceStack.Redis ServiceStack's C# Redis client library] - which can also be used on Linux platforms using [http://www.mono-project.com/Main_Page Mono].
 
-For Java applications the most active library at the moment is [http://code.google.com/p/jredis/ JRedis]. For all other language bindings visit the [http://code.google.com/p/redis/wiki/SupportedLanguages redis supported languages page].
+For Java applications the most active library at the moment is [http://code.google.com/p/jredis/ JRedis]. For all other language bindings visit the [http://redis.io/clients redis supported languages page].
 
 === Redis Admin GUI ===
 For those interested in having a GUI admin tool to visualize your Redis data should check out the [http://www.servicestack.net/mythz_blog/?p=381 Redis Admin UI]
